--- a/Win_XP/luna/widgets/_headerbar.scss
+++ b/Win_XP/luna/widgets/_headerbar.scss
@@ -70,7 +70,7 @@
       font-weight: bold;
       color: $titlebar_title_color;
       padding: 0 12px;
-      text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
+      text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
       
       &:backdrop {
         text-shadow: none;
@@ -104,8 +104,9 @@
     .image-button:checked:disabled {
       background-color: transparent;
       border-style: none;
-      background-size: 21px 21px;
       background-position: center;
+      min-width: 22px;
+      min-height: 22px;
       padding: 3px 2px 2px 3px;
       margin: 3px 0px 0px -4px;
       background-repeat: no-repeat;
@@ -113,8 +114,7 @@
     }
 
     & .image-button{
-      min-width: 21px;
-      min-height: 21px;
+
       background: no-repeat  url('assets/button-bg-normal.png') 100% 100%;
       background-position: center;
       box-shadow: none;
